; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_diff.c_blob_path.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_diff.c_blob_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_array_entry = type { i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.object_array_entry*)* @blob_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @blob_path(%struct.object_array_entry* %0) #0 {
  %2 = alloca %struct.object_array_entry*, align 8
  store %struct.object_array_entry* %0, %struct.object_array_entry** %2, align 8
  %3 = load %struct.object_array_entry*, %struct.object_array_entry** %2, align 8
  %4 = getelementptr inbounds %struct.object_array_entry, %struct.object_array_entry* %3, i32 0, i32 0
  %5 = load i8*, i8** %4, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load %struct.object_array_entry*, %struct.object_array_entry** %2, align 8
  %9 = getelementptr inbounds %struct.object_array_entry, %struct.object_array_entry* %8, i32 0, i32 0
  %10 = load i8*, i8** %9, align 8
  br label %15

11:                                               ; preds = %1
  %12 = load %struct.object_array_entry*, %struct.object_array_entry** %2, align 8
  %13 = getelementptr inbounds %struct.object_array_entry, %struct.object_array_entry* %12, i32 0, i32 1
  %14 = load i8*, i8** %13, align 8
  br label %15

15:                                               ; preds = %11, %7
  %16 = phi i8* [ %10, %7 ], [ %14, %11 ]
  ret i8* %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
